--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
 		"@testing-library/react": "^9.5.0",
 		"@testing-library/user-event": "^7.2.1",
 		"@use-it/interval": "^1.0.0",
+		"gh-pages": "^3.2.3",
 		"ml5": "^0.10.1",
 		"react": "^17.0.0",
 		"react-dom": "^17.0.0",
 		"react-scripts": "3.4.4"
 	},
 	"scripts": {
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -b main -d build",
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
